cloud/dex/network-policies/allow-kube-apiserver-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-apiserver-egress
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: dex
      app.kubernetes.io/instance: dex
      app.kubernetes.io/name: dex
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
